--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,10 @@
   },
   "homepage": "https://github.com/MariuszLeonGebel/Konto#readme",
   "dependencies": {
+    "@fastify/static": "^6.5.0",
     "fastify": "^4.5.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
